--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-Hello World! Testing.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Katie Pustolski's Portfolio" />
+    <meta name="author" content="Katie Pustolski" />
+    <title>Katie Pustolski's Portfolio</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
+
+  <body>
+        <!-- Navigation -->
+        <div class="container">
+            <header
+            class="d-flex flex-wrap justify-content-center py-3 mb-4 mt-3 border-bottom">
+                <a
+                    href="/"
+                    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                    <span class="fs-4">Katie Pustolski</span>
+                </a>
+                <ul class="nav nav-pills">
+                    <li class="nav-item px-2">
+                    <a href="#" class="nav-link active" aria-current="page">Projects</a>
+                    </li>
+                    <li class="nav-item px-2">
+                    <a href="#" class="nav-link">About</a>
+                    </li>
+                </ul>
+            </header>
+        </div>
+
+      <!-- Body -->
+      <div class="container my-5">
+        <main>
+            <div class="row row-cols-1 pb-3">
+                <h1>Header 1</h1>
+                <h3 class="text-body-secondary fw-light">Subitle</h3>
+                </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <a href="https://duckduckgo.com/">
+                    <div class="card text-bg-dark">
+                    <!-- <img src="..." class="card-img" height="300px" alt="..."> -->
+                     <svg aria-label="Placeholder: Card image" class="bd-placeholder-img bd-placeholder-img-lg card-img" height="270" preserveAspectRatio="xMidYMid slice" role="img" width="100%" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Card image</text></svg>
+                     <div class="card-img-overlay d-flex align-items-end">
+                        <div class="container">
+                            <p class="card-title fs-4">Card title</p>
+                            <p class="card-text fst-italic">Last updated 3 mins ago</p>
+                        </div>
+                        </div>
+                    </div>
+                    </a>
+                </div>
+            </div>
+        </main>
+      </div>
+
+      <!-- Footer -->
+    <div class="container">
+      <footer class="text-muted bg-greyLightBlue">
+            <div class="d-flex justify-content-center">
+          <p class="smallText">© Katie Pustolski 2025</p>
+          <div>
+      </footer>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
