Finished adding content to stepstoneisland.html

--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -54,7 +54,7 @@
                         <p class="lead">
                             Stepstone Island is a mobile game for Apple iPhone devices where players clean up
                             and nurture their own virtual island through exercise. Targeted toward those seeking to
-                            improve their exercise habits in a casual way, the app takes in real data from Apple’s
+                            improve their exercise habits in a casual way, the app takes in real data from Apple's
                             Health app and converts it into in-game currency. This currency may be used to clean
                             debris, plant trees, build landmarks, and interact with the game-world. The more
                             beautiful and clean your island becomes, the higher the chance of characters visiting
@@ -71,7 +71,7 @@
                         </div> -->
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/iphone5s_gold_portrait.jpeg" class="img-fluid mx-auto d-block" alt="iphone5s_gold_portrait.jpeg" width="500"/>
+                        <img src="../images/projects/stepstoneisland/iphone5s_gold_portrait.jpeg" class="img-fluid mx-auto d-block rounded" alt="iphone5s_gold_portrait.jpeg" width="500"/>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                             <p>“This is such a fun and soothing game to relax and unwind! I look
                             forward to playing it at the end of each day as I use my daily steps to
                             earn coins, and then pay to clean up the island and plant flowers and
-                            trees! It’s so rewarding to watch the island transform! Couldn’t
+                            trees! It's so rewarding to watch the island transform! Couldn't
                             recommend it more!! 💕”
                         </p>
                         </blockquote>
@@ -96,10 +96,10 @@
                     <div class="col">
                         <figure class="text-center">
                         <blockquote class="blockquote">
-                            <p>“I’ve only just started playing (luckily it still tracked my 10,000+ steps
+                            <p>“I've only just started playing (luckily it still tracked my 10,000+ steps
                             from today!) but this app is wonderful. The art is gorgeous and the
                             music is so soothing, kind of has animal crossing sort of feel. I look
-                            forward to using this app more in the coming weeks/months, it’s
+                            forward to using this app more in the coming weeks/months, it's
                             already made a great impression on me!”
                         </p>
                         </blockquote>
@@ -129,25 +129,25 @@
                 </div>
                 <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 py-3">
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_01.png" class="img-fluid" alt="gallery_01.png">
+                        <img src="../images/projects/stepstoneisland/gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_02.png"class="img-fluid"  alt="gallery_02.png">
+                        <img src="../images/projects/stepstoneisland/gallery_02.png"class="img-fluid rounded"  alt="gallery_02.png">
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_03.png"class="img-fluid"  alt="gallery_03.png">
+                        <img src="../images/projects/stepstoneisland/gallery_03.png"class="img-fluid rounded"  alt="gallery_03.png">
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_04.png"class="img-fluid"  alt="gallery_04.png">
+                        <img src="../images/projects/stepstoneisland/gallery_04.png"class="img-fluid rounded"  alt="gallery_04.png">
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_05.png"class="img-fluid"  alt="gallery_05.png">
+                        <img src="../images/projects/stepstoneisland/gallery_05.png"class="img-fluid rounded"  alt="gallery_05.png">
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_06.png"class="img-fluid"  alt="gallery_06.png">
+                        <img src="../images/projects/stepstoneisland/gallery_06.png"class="img-fluid rounded"  alt="gallery_06.png">
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_07.gif"class="img-fluid"  alt="gallery_07.png">
+                        <img src="../images/projects/stepstoneisland/gallery_07.gif"class="img-fluid rounded"  alt="gallery_07.png">
                     </div>
                 </div>
             </div>
@@ -180,9 +180,9 @@
                             Visual Studio, SourceTree, and GitHub.
                         </p>
                     </div>
-                    <div class="col">
+                    <!-- <div class="col">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/NC8JAmMvvS0?si=gwkNYaK_WyzbtuGF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -217,7 +217,7 @@
                         </p>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/ideation_01.png" class="img-fluid mx-auto d-block" alt="ideation_01" width="350"/>
+                        <img src="../images/projects/stepstoneisland/ideation_01.png" class="img-fluid mx-auto d-block rounded" alt="ideation_01" width="350"/>
                     </div>
                 </div>
             </div>
@@ -233,7 +233,7 @@
                             Many prototypes were made in the beginning of development to test interactions and
                             idle-game mechanics. Of course, one of the most important features to nail down was
                             the fitness API integration. I first started working with the FitBit API. However, I ended
-                            up using Apple’s Health App data instead because it was much easier to integrate with
+                            up using Apple's Health App data instead because it was much easier to integrate with
                             Unity via the BEHealth Kit plug-in.
                         </p>
                         <p>
@@ -248,16 +248,16 @@
                 </div>
                 <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3 py-3">
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_01.png" class="img-fluid" alt="gdd_01.png">
+                        <img src="../images/projects/stepstoneisland/gdd_prototype_01.png" class="img-fluid rounded" alt="gdd_prototype_01.png">
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_02.png"class="img-fluid"  alt="gdd_02.png">
+                        <img src="../images/projects/stepstoneisland/gdd_prototype_02.png"class="img-fluid rounded"  alt="gdd_prototype_02.png">
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_03.jpeg"class="img-fluid"  alt="gdd_03.jpeg">
+                        <img src="../images/projects/stepstoneisland/gdd_prototype_03.jpeg"class="img-fluid rounded"  alt="gdd_prototype_03.jpeg">
                     </div>  
                 </div>
-                <div class="row py-3">
+                <div class="row row-cols-1 py-3 row-cols-lg-2">
                     <div class="col">
                         <h3>Game Loop</h3>
                         <p>
@@ -267,7 +267,7 @@
                             that visit the island.
                         </p>
                         <p>
-                            Shovels and pickaxes are purchased from Olly’s Outlet and used to clean up the debris
+                            Shovels and pickaxes are purchased from Olly's Outlet and used to clean up the debris
                             on the island. This makes space for items to be placed.
                         </p>
                         <p>
@@ -278,7 +278,120 @@
                         </p>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_04.png" class="img-fluid" alt="gdd_04.png">
+                        <img src="../images/projects/stepstoneisland/gdd_gameloop_04.png" class="img-fluid rounded" alt="gdd_gameloop_04.png">
+                    </div>
+                </div>
+                <div class="row row-cols-1 g-2 g-lg-3 py-3">
+                    <div class="col">
+                        <h3>Character Design</h3>
+                        <p>
+                            Michelle, Sam, and Steven helped tremendously with the character design on this
+                            project. Our first character was Olly the Osprey, an equivalent to a “Professor Oak“ or
+                            “Tom Nook“ type role that guides the player through the game.
+                        </p>
+                        <p>
+                            After designing Olly, we then went on to design seven additional characters that visit the
+                            island. Each character (except Olly) would arrive on their own boat and stand
+                            somewhere near an item on their checklist after the player taps on their boat to greet
+                            them. All characters also come with their own unique set of dialogue.
+                        </p>
+                    </div>
+                </div>
+                <div class="row row-cols-2 g-2 g-lg-3 py-3">
+                    <div class="col">
+                        <img src="../images/projects/stepstoneisland/gdd_character_design_01.png" class="img-fluid rounded" alt="gdd_character_design_01.png">
+                    </div>
+                    <div class="col">
+                        <img src="../images/projects/stepstoneisland/gdd_character_design_02.png"class="img-fluid rounded"  alt="gdd_character_design_02.png">
+                    </div>
+                </div>
+                <div class="row py-3">
+                    <div class="col">
+                        <h3>Concept Art</h3>
+                        <p>
+                            Stepstone Island is visually inspired by the islands in the Pacific Northwest, map
+                            illustrations, and the outdoors in general.
+                        </p>
+                    </div>
+                </div>
+                <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3 py-3">
+                    <div class="col">
+                        <img src="../images/projects/stepstoneisland/gdd_concept_art_01.png" class="img-fluid rounded" alt="gdd_concept_art_01.png">
+                    </div>
+                    <div class="col">
+                        <img src="../images/projects/stepstoneisland/gdd_concept_art_02.png"class="img-fluid rounded"  alt="gdd_concept_art_02.png">
+                    </div>
+                    <div class="col">
+                        <img src="../images/projects/stepstoneisland/gdd_concept_art_03.png"class="img-fluid rounded"  alt="gdd_concept_art_03.png">
+                    </div>
+                </div>
+                <div class="row py-3">
+                    <div class="col">
+                        <h3>Music & Sound Design</h3>
+                        <p>
+                            In Fall 2017, I pitched the project to a group of students from the Thornton School of
+                            Music and recruited our composer, Sarah Trevino. She made three awesome tracks for
+                            the game that coincide with specific times during the day: morning, afternoon, and
+                            night. She also created some great stingers as well.
+                        </p>
+                        <p>
+                            In addition to a composer, Team Stepstone Island also had Blair Devereaux for sound
+                            design and she created all of the sound effects included in the game. You know those
+                            character dialogue murmurs that you hear in the game? That was all her.
+                        </p>
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3 py-3">
+                    <div class="col">
+                        <h3>Playtesting</h3>
+                        <p>
+                            By January 2018, the game was ready for long-term playtests with Apple's TestFlight
+                            App. A total of five long term playtests were conducted between January 2018 and
+                            March 2018 with a total of forty two people ranging from ages eighteen to fifty. These
+                            playtests lasted a few days and required the player to exercise. Out of those forty two
+                            people, twenty one filled out the post-playtest survey.
+                        </p>
+                        <p>
+                            These playtests were valuable in improving the player's experience of the project and
+                            also helped me test the game on different iPhone devices. I made various changes to
+                            the game due to these playtests, including adding labels to items in Olly's shop and
+                            timed notifications to remind the player to check back into the game. I also had to adjust
+                            for the iPhone X aspect ratio after finding that the canvas didn't scale correctly.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <img src="../images/projects/stepstoneisland/gdd_playtesting_01.png" class="img-fluid rounded" alt="gdd_playtesting_01.png">
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-lg-1 g-2 g-lg-3 py-3">
+                    <h3>Work In Progress Pictures</h3>
+                    <div class="col">
+                        <img src="../images/projects/stepstoneisland/gdd_wip_01.png" class="img-fluid rounded" alt="gdd_wip_01.png">
+                    </div>
+                </div>
+            </div>
+
+            <div class="container my-3 py-3 border-bottom">
+                <div class="row">
+                    <h2> Presentation </h2>
+                </div>
+                <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3 py-3">
+                    <div class="col">
+                        <h3>Showing It Off</h3>
+                        <p>
+                            Because Stepstone Island revolved so much around one's personal fitness, I made the
+                            decision to publish it on the Apple App Store. This way people could easily download it
+                            for free and play directly with their own Health App Data. We had a lot of requests for
+                            the game to be put onto Android devices. However, due to the scope of the project and
+                            my limited knowledge of Android devices, this is not a possibility at this time.
+                        </p>
+                        <p>
+                            Stepstone Island was first shown at the USC Games Expo in May 2018 and later on at
+                            the IndieCade Showcase @ E3 in June 2018.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <img src="../images/projects/stepstoneisland/presentation_01.jpeg" class="img-fluid mx-auto d-block rounded" alt="presentation_01.jpeg"/>
                     </div>
                 </div>
             </div>
