Updated steptoneisland.html with span tags
* Also added padding to h3 elements
* Changes smart ' to plain text '
* Fixed link to sytle sheet
* Removed Gallery header

--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -12,7 +12,7 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -52,10 +52,10 @@
                 <div class="row py-3">
                     <div class="col-md-6">
                         <p class="lead">
-                            Stepstone Island is a mobile game for Apple iPhone devices where players clean up
+                            Stepstone Island is a <span class="fw-bold">mobile game</span> for <span class="fw-bold">Apple iPhone</span> devices where players clean up
                             and nurture their own virtual island through exercise. Targeted toward those seeking to
-                            improve their exercise habits in a casual way, the app takes in real data from Apple's
-                            Health app and converts it into in-game currency. This currency may be used to clean
+                            improve their exercise habits in a casual way, the app takes in real data from <span class="fw-bold">Apple's
+                            Health app</span> and converts it into in-game currency. This currency may be used to clean
                             debris, plant trees, build landmarks, and interact with the game-world. The more
                             beautiful and clean your island becomes, the higher the chance of characters visiting
                             your island and supporting your hard work!
@@ -124,9 +124,6 @@
             </div>
 
             <div class="container my-3 py-3 border-bottom">
-                <div class="row">
-                    <h2> Gallery </h2>
-                </div>
                 <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 py-3">
                     <div class="col">
                         <img src="../images/projects/stepstoneisland/gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
@@ -159,10 +156,10 @@
                 <div class="row row-cols-1 py-3 row-cols-lg-2">
                     <div class="col">
                         <p>
-                            Stepstone Island was created between spring 2017 and spring 2018 as my thesis
+                            Stepstone Island was created between <span class="fw-bold">spring 2017 and spring 2018</span> as my thesis
                             project for my MFA in Interactive Media degree at the University of Southern California. I
-                            took on multiple roles including gameplay programmer, lead designer, and project
-                            manager during development.
+                            took on multiple roles including <span class="fw-bold">software engineer, director, and project
+                            manager</span> during development.
                         </p>
                         <p>
                             Team Stepstone Island:
@@ -199,12 +196,12 @@
                             opposite of Zombies, Run!.
                         </p>
                         <p>
-                            <h3>Audience Experience Goals</h3>
+                            <h3 class="py-2">Audience Experience Goals</h3>
                             <ul>
                                 <li>Motivate players to move and exercise</li>
                                 <li>Encourage a sense of positivity and silliness through the world</li>
                             </ul>
-                            <h3>Design Goals</h3>
+                            <h3 class="py-2">Design Goals</h3>
                             <ul>
                                 <li>Gather actual step data from the player</li>
                                 <li>Create a fluid UI with a gentle learning curve.</li>
@@ -228,7 +225,7 @@
                 </div>
                 <div class="row py-3">
                     <div class="col">
-                        <h3>Early Prototypes</h3>
+                        <h3 class="pb-3">Early Prototypes</h3>
                         <p>
                             Many prototypes were made in the beginning of development to test interactions and
                             idle-game mechanics. Of course, one of the most important features to nail down was
@@ -259,7 +256,7 @@
                 </div>
                 <div class="row row-cols-1 py-3 row-cols-lg-2">
                     <div class="col">
-                        <h3>Game Loop</h3>
+                        <h3 class="pb-3">Game Loop</h3>
                         <p>
                             The game revolves around collecting currency that can be used to purchase items from
                             the in-game shop. The game has three main currencies. Coins and milestones are
@@ -283,7 +280,7 @@
                 </div>
                 <div class="row row-cols-1 g-2 g-lg-3 py-3">
                     <div class="col">
-                        <h3>Character Design</h3>
+                        <h3 class="pb-3">Character Design</h3>
                         <p>
                             Michelle, Sam, and Steven helped tremendously with the character design on this
                             project. Our first character was Olly the Osprey, an equivalent to a “Professor Oak“ or
@@ -307,7 +304,7 @@
                 </div>
                 <div class="row py-3">
                     <div class="col">
-                        <h3>Concept Art</h3>
+                        <h3 class="pb-3">Concept Art</h3>
                         <p>
                             Stepstone Island is visually inspired by the islands in the Pacific Northwest, map
                             illustrations, and the outdoors in general.
@@ -327,12 +324,12 @@
                 </div>
                 <div class="row py-3">
                     <div class="col">
-                        <h3>Music & Sound Design</h3>
+                        <h3 class="pb-3">Music & Sound Design</h3>
                         <p>
                             In Fall 2017, I pitched the project to a group of students from the Thornton School of
                             Music and recruited our composer, Sarah Trevino. She made three awesome tracks for
-                            the game that coincide with specific times during the day: morning, afternoon, and
-                            night. She also created some great stingers as well.
+                            the game that coincide with specific times during the day: <span class="fw-bold"> morning, afternoon, and
+                            night</span>. She also created some great stingers as well.
                         </p>
                         <p>
                             In addition to a composer, Team Stepstone Island also had Blair Devereaux for sound
@@ -343,10 +340,10 @@
                 </div>
                 <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3 py-3">
                     <div class="col">
-                        <h3>Playtesting</h3>
+                        <h3 class="pb-3">Playtesting</h3>
                         <p>
-                            By January 2018, the game was ready for long-term playtests with Apple's TestFlight
-                            App. A total of five long term playtests were conducted between January 2018 and
+                            By January 2018, the game was ready for long-term playtests with <span class="fw-bold">Apple's TestFlight
+                            App</span>. A total of five long term playtests were conducted between January 2018 and
                             March 2018 with a total of forty two people ranging from ages eighteen to fifty. These
                             playtests lasted a few days and required the player to exercise. Out of those forty two
                             people, twenty one filled out the post-playtest survey.
@@ -377,7 +374,7 @@
                 </div>
                 <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3 py-3">
                     <div class="col">
-                        <h3>Showing It Off</h3>
+                        <h3 class="pb-3">Showing It Off</h3>
                         <p>
                             Because Stepstone Island revolved so much around one's personal fitness, I made the
                             decision to publish it on the Apple App Store. This way people could easily download it
@@ -386,8 +383,8 @@
                             my limited knowledge of Android devices, this is not a possibility at this time.
                         </p>
                         <p>
-                            Stepstone Island was first shown at the USC Games Expo in May 2018 and later on at
-                            the IndieCade Showcase @ E3 in June 2018.
+                            Stepstone Island was first shown at the <span class="fw-bold">USC Games Expo</span> in May 2018 and later on at
+                            the <span class="fw-bold">IndieCade Showcase @ E3</span> in June 2018.
                         </p>
                     </div>
                     <div class="col">
